# simpleOS

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md  kernel.asm
Documentation/: build.sh  link.ld
boot/: gdt.asm  kernel.asm
include/: cpu.h  idt.h  isr.h  kb.h  monitor.h  string.h  time.h  util.h
include/drivers/: kb.h  keyboard.h
kernel/: common.cpp  cpu.cpp  idt.c  isr.c  kb.cpp  main.c  main.cpp  monitor.c  monitor.cpp  shell.cpp  string.cpp  time.cpp  util.cpp
kernel/builtins/include/: calendar.h
kernel/builtins/source/: calendar.cpp
kernel/drivers/: kb.cpp  keyboard.cpp  tty.cpp
kernel/gdt/: gdt.c  gdt.h
kernel/include/: builtins_programms.h  common.h  idt.h  isr.h  shell.h  time.h  types.h
kernel/include/drivers/: keyboard.h  tty.h
lib/: cpu.c  cpu.cpp
libc/include/: string.h
libc/string/: string.cpp
src/: common.c  interrupt.asm  isr.c  kb.c  main.c  monitor.c
tests/: CMakeLists.txt  hello_test.cc
